--- a/app/src/main/res/layout/activity_organizer_home.xml
+++ b/app/src/main/res/layout/activity_organizer_home.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome!"
+        android:text="Welcome! This is the Organizer Home Page"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/black" />
