--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -52,9 +52,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvUsers"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:visibility="gone"
-        android:overScrollMode="never"/>
+        android:layout_height="wrap_content"
+        android:overScrollMode="never"
+        android:visibility="gone" />
 
     <!-- EVENTS SECTION -->
     <LinearLayout
@@ -93,9 +93,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvEvents"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:visibility="gone"
-        android:overScrollMode="never"/>
+        android:layout_height="wrap_content"
+        android:overScrollMode="never"
+        android:visibility="gone" />
 
     <!-- CATEGORIES SECTION -->
     <LinearLayout
@@ -134,7 +134,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCategories"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:overScrollMode="never"
         android:visibility="gone" />
 
