--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/categoryCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
@@ -27,34 +27,36 @@
                 android:layout_height="wrap_content"
                 android:text="Category Name"
                 android:textSize="16sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvCategoryDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Description of this category may be long and will wrap within the card bounds."
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginLeft="5dp"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/btnCategoryEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
-                android:text="Edit"/>
+                android:padding="0dp"
+                android:text="Edit" />
 
             <Button
                 android:id="@+id/btnCategoryDelete"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
-                android:text="Delete"/>
+                android:padding="0dp"
+                android:text="Delete" />
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
