add category creation for admin

--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -124,6 +124,7 @@
             android:textStyle="bold" />
 
         <Button
+            android:id="@+id/btnNewCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Category"
