--- a/app/src/main/res/layout/activity_edit_category.xml
+++ b/app/src/main/res/layout/activity_edit_category.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="16dp"/>
 
     <Button
-        android:id="@+id/btnNewCategory"
+        android:id="@+id/btnSaveChanges"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
