--- a/app/src/main/res/layout/activity_organizer_dashboard.xml
+++ b/app/src/main/res/layout/activity_organizer_dashboard.xml
@@ -19,4 +19,20 @@
         android:textStyle="bold"
         android:textColor="@android:color/black" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvEvents"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingTop="12dp"
+        android:clipToPadding="false"
+        android:layout_marginTop="12dp" />
+
+    <Button
+        android:id="@+id/btnAddEvent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Event"
+        android:layout_marginTop="16dp"/>
+
 </LinearLayout>
