--- a/app/src/main/res/layout/admin_manage_category_activity.xml
+++ b/app/src/main/res/layout/admin_manage_category_activity.xml
@@ -3,4 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btn_add_category"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add Category" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
