--- a/app/src/main/res/layout/admin_manage_category_activity.xml
+++ b/app/src/main/res/layout/admin_manage_category_activity.xml
@@ -8,6 +8,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_category_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <Button
             android:id="@+id/btn_add_category"
             android:layout_width="match_parent"
