--- a/app/src/main/res/layout/admin_manage_users_activity.xml
+++ b/app/src/main/res/layout/admin_manage_users_activity.xml
@@ -9,7 +9,7 @@
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewUsers"
+            android:id="@+id/recycler_user_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
