--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -9,45 +9,51 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/text_event_name"
+            android:id="@+id/text_item_event_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Event Name" />
 
         <TextView
-            android:id="@+id/text_event_description"
+            android:id="@+id/text_item_event_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Event Description" />
 
         <TextView
-            android:id="@+id/text_event_category"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Associate Category" />
-
-        <TextView
-            android:id="@+id/text_event_date_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Event Date and Time" />
-
-        <TextView
-            android:id="@+id/text_event_fee"
+            android:id="@+id/text_item_event_fee"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Event Fee" />
 
-        <Button
-            android:id="@+id/btn_event_edit_event"
+        <TextView
+            android:id="@+id/text_item_event_category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="edit event" />
+            android:text="category" />
+
+        <TextView
+            android:id="@+id/text_item_event_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Event Date" />
+
+        <TextView
+            android:id="@+id/text_item_event_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Event Time" />
 
         <Button
-            android:id="@+id/btn_event_delete_event"
-            android:layout_width="match_parent"
+            android:id="@+id/btn_item_event_edit"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="delete devent" />
+            android:text="Edit Event" />
+
+        <Button
+            android:id="@+id/btn_item_event_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete Event" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
