--- a/app/src/main/res/layout/organizer_add_event_activity.xml
+++ b/app/src/main/res/layout/organizer_add_event_activity.xml
@@ -45,9 +45,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:hint="Event Time"
             android:inputType="text"
-            android:text="Event Time"
-            android:orientation="vertical"/>
+            android:orientation="vertical" />
 
         <RadioGroup
             android:id="@+id/radio_group_event_categories"
