--- a/app/src/main/res/layout/participant_home_activity.xml
+++ b/app/src/main/res/layout/participant_home_activity.xml
@@ -1,6 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/text_participant_searchbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Search"
+            android:inputType="text" />
+
+        <RadioGroup
+            android:id="@+id/radio_group_category_filter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </RadioGroup>
+
+        <Button
+            android:id="@+id/btn_participant_searchevents_submit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Search Events" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_participant_events"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
