--- a/app/src/main/res/layout/participant_home_activity.xml
+++ b/app/src/main/res/layout/participant_home_activity.xml
@@ -33,8 +33,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_participant_events"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
