--- a/app/src/main/res/layout/admin_add_category_activity.xml
+++ b/app/src/main/res/layout/admin_add_category_activity.xml
@@ -1,33 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:gravity="center_vertical">
 
-        <EditText
-            android:id="@+id/text_category_name"
+        <!-- Category Name Field -->
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:hint="Category Name"
-            android:inputType="text" />
+            style="?attr/textInputStyle">
 
-        <EditText
-            android:id="@+id/text_category_description"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/text_category_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!-- Category Description Field -->
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:hint="Category Description"
-            android:inputType="text" />
+            style="?attr/textInputStyle"
+            android:layout_marginTop="12dp">
 
-        <Button
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/text_category_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!-- Save Button -->
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_add_category_submit"
+            style="?attr/materialButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Save Category" />
+            android:text="Save Category"
+            android:layout_marginTop="24dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
