--- a/app/src/main/res/layout/item_defined_category.xml
+++ b/app/src/main/res/layout/item_defined_category.xml
@@ -7,13 +7,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="8dp">
 
-        <RadioButton
+        <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/radio_defined_category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="RadioButton"
+            android:textSize="16sp"
+            android:padding="8dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
