--- a/app/src/main/res/layout/organizer_manage_request_activity.xml
+++ b/app/src/main/res/layout/organizer_manage_request_activity.xml
@@ -6,11 +6,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/text_organizer_manage_request_welcome"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Manage Requests"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_marginBottom="24dp"
+            android:textColor="?android:attr/textColorPrimary" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_organizer_manage_requrest"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="0dp"
+            android:layout_weight="1" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
