--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -7,6 +7,20 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
+  <TextView
+    android:id="@+id/text_signup_title"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Signup"
+    android:textSize="28sp"
+    android:textStyle="bold"
+    android:gravity="center"
+    android:layout_marginBottom="32dp"
+    android:textColor="?android:attr/textColorPrimary"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent" />
+
   <!-- Back Button (outlined secondary) -->
   <com.google.android.material.button.MaterialButton
     android:id="@+id/btn_signup_back"
@@ -22,7 +36,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="Email"
-    android:layout_marginTop="16dp">
+    android:layout_marginTop="16dp"
+    app:layout_constraintTop_toBottomOf="@id/text_signup_title">
 
     <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/text_signup_email"
