--- a/app/src/main/res/layout/organizer_home_activity.xml
+++ b/app/src/main/res/layout/organizer_home_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
@@ -9,6 +10,26 @@
   android:orientation="vertical"
   android:background="@color/white"
   android:fitsSystemWindows="true">
+
+
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="8dp"
+      android:gravity="end"
+      android:orientation="horizontal">
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        android:textAllCaps="false"
+        app:icon="@drawable/ic_logout"
+        app:iconGravity="textStart"
+        app:iconPadding="8dp"
+        app:iconSize="20dp" />
+  </LinearLayout>
 
   <ImageView
     android:id="@+id/image_organizer_logo"
@@ -61,6 +82,7 @@
     app:iconPadding="8dp"
     app:iconSize="24dp" />
 </LinearLayout>
+
 
 
 <!-- <?xml version="1.0" encoding="utf-8"?> -->
