--- a/app/src/main/res/layout/participant_home_activity.xml
+++ b/app/src/main/res/layout/participant_home_activity.xml
@@ -9,6 +9,26 @@
   android:fitsSystemWindows="true"
   android:background="@color/white">
 
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:gravity="end"
+      android:layout_marginBottom="8dp">
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        android:textAllCaps="false"
+        app:icon="@drawable/ic_logout"
+        app:iconGravity="textStart"
+        app:iconPadding="8dp"
+        app:iconSize="20dp" />
+  </LinearLayout>
+
+
   <ImageView
     android:layout_width="100dp"
     android:layout_height="100dp"
