Added manage category button functioning

--- a/app/src/main/res/layout/admin_manage_category_activity.xml
+++ b/app/src/main/res/layout/admin_manage_category_activity.xml
@@ -25,7 +25,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_category_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_add_category"
